alles auskommentiert was nicht formel ist

--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ site: bookdown::bookdown_site
 documentclass: book
 github-repo: highlando/script-emds
 url: 'https\://www.janheiland.de/script-emds/'
-description: "Vorlesungsnotizen zu meiner integrierten Vorlesung im SoSe 2022"
+description: "Die Formeln zur Vorlesung"
 urlcolor: purple
 bibliography: ["emda.bib"]
 link-citations: true
