--- a/vl_04.Rmd
+++ b/vl_04.Rmd
@@ -4,9 +4,9 @@ W&auml;hrend in den vorherigen Kapiteln der Versuch war, einen funktionalen Zusa
 
 Weil ich den Ansatz gerne *ad hoc* also am Problem entlang motivieren und einf&uuml;hren will, vorweg schon mal die bevorstehenden Schritte
 
-1. Zentrierung/Skalierung der Daten
-2. Berechnung der Varianzen im Standard Koordinatensystem
-3. &Uuml;berlegung, dass Daten in einem anderen Koordinatensystem eventuell besser dargestellt werden im Sinne
+1. Zentrierung/Skalierung der Daten.
+2. Berechnung der Varianzen im Standard Koordinatensystem.
+3. &Uuml;berlegung, dass Daten in einem anderen Koordinatensystem eventuell besser dargestellt werden.
 4. Berechnung eines optimalen Koordinatenvektors mittels SVD.
 
 Wir nehmen noch einmal die Covid-Daten her, vergessen kurz, dass es sich um eine Zeitreihe handelt und betrachten sie als Datenpunkte $(x_i, y_i)$, $i=1,\dotsc,N$, im zweidimensionalen Raum mit Koordinaten $x$ und $y$. 
@@ -211,7 +211,7 @@ als neue Koordinatenrichtungen mit
 \begin{equation*}
 s_1^2 \approx 0.85, \quad s_2^2 \approx 0.04,
 \end{equation*}
-was bereits eine deutliche Dominanz der $v_1$-Richtung -- genannt \emph{Hauptachse} -- zeigt.
+was bereits eine deutliche Dominanz der $v_1$-Richtung -- genannt *Hauptachse* -- zeigt.
 
 Im Hinblick auf die n&auml;chste Vorlesung, in der wir Anwendungen und Eigenschaften der PCA untersuchen werden, noch ein Plot der Daten mit der $v_1$-Richtung als Linie eingezeichnet.
 
